Some fix to css on mobile

--- a/assets/css/screen.less
+++ b/assets/css/screen.less
@@ -137,6 +137,9 @@ article.preview {
 
     h1.blog-title{
         margin-bottom: 1em;
+        @media only screen and (min-width: 320px) and (max-width: 662px) {
+            margin-bottom: 0;
+        }
     }
 
     h1.blog-title a{
@@ -161,7 +164,7 @@ article.preview {
     }
 }
 
-h1.blog-title, h2.blog-description {
+h2.blog-description {
     text-align: center
 }
 
@@ -397,9 +400,9 @@ nav {
             &:last-child {
                 margin-right: 0;
             }
-            @media only screen and (min-width: 320px) and (max-width: 662px) {
-                display: block;
-            }
+            // @media only screen and (min-width: 320px) and (max-width: 662px) {
+            //     display: block;
+            // }
         }
     }
     &.pagination {
